# HandTrackingV3

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md  copilot-working-rules.md
docs/: COORDINATE_SYSTEM.md  FOCUS_CALIBRATION.md  MODEL_TESTING.md  MODEL_TESTING_QUICK.md  MODEL_VERIFICATION.md  OPTIMAL_WORKFLOW_V2_REVIEW.md  OPTIMAL_WORKFLOW_V3.md  OSC_GESTURE_REFERENCE.md  OSC_QUICK_REFERENCE.md  PLAYER_LOCK_DESIGN.md  README.md  SERVICE_MANUAL.md  SPECIFICATION.md  TODO.md
docs/Archive/: NEW_ARCHITECTURE.md  OPTIMAL_WORKFLOW_V2_FINAL.md  TODO_old.md
include/core/: Filters.hpp  Frame.hpp  FramePool.hpp  GestureFSM.hpp  HandTracker.hpp  InputLoop.hpp  Logger.hpp  MemoryUtils.hpp  OscSender.hpp  PipelineManager.hpp  PlayVolume.hpp  ProcessingLoop.hpp  SpscQueue.hpp  StereoDepth.hpp  StereoKernel.hpp  SystemMonitor.hpp  Types.hpp
include/inference/: HandLandmark.hpp  PalmDetector.hpp  TensorRTEngine.hpp
include/math/: Filters.hpp
include/net/: MjpegServer.hpp  OscSender.hpp
models/: hand_landmark.onnx  palm_detection.onnx
scripts/: check_models.sh  check_nn_blobs.sh  compile_blobs.sh  compile_hand_landmark.py  convert_blobs.py  convert_to_onnx.py  diagnose_jetson.sh  download_tflite_models.py  fix_oak_reconnect.sh  hand-tracking.service  jetson-performance.service  jetson_max_performance.sh  kill_old_service.sh  palm_roi_script.py.disabled  pre_build.sh  setup_performance_autostart.sh  setup_sudoers.sh  switch_models.sh  update_models.py
scripts/oak_blob_gen/: blobconverter.py  hand_landmark_full.xml  palm_detection.xml
src/: main.cpp
src/core/: Filters.cpp  GestureFSM.cpp  HandTracker.cpp  InputLoop.cpp  Logger.cpp  OscSender.cpp  PipelineManager.cpp  ProcessingLoop.cpp  StereoDepth.cpp  StereoKernel.cu  SystemMonitor.cpp
src/inference/: HandLandmark.cpp  PalmDetector.cpp  TensorRTEngine.cpp
src/math/: Filters.cpp
src/net/: MjpegServer.cpp  OscSender.cpp
